--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
         </div>
         <label for="exampleMessage">Message</label>
         <div class="c-2"></div>
-        <textarea class="u-full-width" placeholder="Hi Dave …" id="exampleMessage">
-
-        </textarea>
+        <textarea class="u-full-width" placeholder="Hi Dave..." id="exampleMessage"></textarea>
         <label class="example-send-yourself-copy">
           <input type="checkbox">
           <span class="label-body">Send a copy to yourself</span>
@@ -73,8 +71,19 @@
 
     </div>
   </div>
+  <div class="modal-container" id="modal-container">
+    <div class="modal-card">Modal</div>
+  </div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+  <script>
+    const mdlctnr = document.getElementById('modal-container');
+    console.log(mdlctnr)
+    mdlctnr.addEventListener('click', function () {
+      mdlctnr.classList.add('hide')
+    });
+  </script>
 </body>
 </html>
